--- a/app/views/flickr_images/index.html.erb
+++ b/app/views/flickr_images/index.html.erb
@@ -1,7 +1,7 @@
 <div>
   <%= form_for search_form, url: flickr_images_path, method: :get do |f| %>
     <%= f.text_field :keyword %>
-    <%= f.submit %>
+    <%= f.submit 'Search' %>
   <% end %>
 </div>
 <div>
